<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Climbs</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="crag">Crag</string>
    <string name="gym">Gym</string>
    <string name="train">Train</string>
    <string name="type">Type</string>
    <string name="id">Id</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="area">Area</string>
    <string name="grade">Grade</string>
    <string name="climbAttributes">Climbing Attributes</string>
    <string name="chooseLocation">Choose Location</string>
    <string name="chooseArea">Choose Area</string>
    <string name="plus">+</string>
    <string name="slope">Slope</string>
    <string name="moves">Moves</string>
    <string name="cal">CAL</string>
    <string name="status">Status</string>
    <string name="injury">Injury</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="firstAttempt">1st Atempt</string>
    <string name="firstSend">1st Send</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="gps">GPS</string>
    <string name="googleMaps">Google Maps</string>
    <string name="comments">Comments</string>
    <string name="save">Save</string>
    <string name="newLocation">New Location</string>
    <string name="newArea">New Area</string>
    <string name="climbs">Climbs</string>
    <string name="newClimb">New Climb</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="climbName">climb name</string>
    <string name="climbPhoto">Climb Photo</string>
    <string name="editLocation">Location Info</string>
    <string name="locations">Locations</string>
    <string name="areas">Areas</string>
    <string name="attempts">Attempts</string>
    <string name="sends">Sends</string>
    <string name="nothing"></string>
    <string name="calories">Calories</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="history">History</string>

</resources>