<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
    


        <RadioGroup
            android:id="@+id/radioBtnGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/gymRbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/gym"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/cragRbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/crag"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/historyViewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history" />

        </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/locationArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/climbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Climb Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <TextView
           android:id="@+id/textView6"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginRight="5dp"
           android:layout_weight="25"
           android:text="@string/grade"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
        
        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:text="@string/color"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="25"
            android:text="@string/slope"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spnGrade"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:textColor="#FFFFFF"       
            android:background="@android:color/transparent"
            tools:listitem="@android:layout/simple_spinner_item" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:popupBackground="@android:color/transparent"
            tools:listitem="@android:layout/simple_spinner_item" />
        
        <Spinner
            android:id="@+id/spnColor"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:popupBackground="@android:color/transparent"
            tools:listitem="@android:layout/simple_spinner_item" />

        <Spinner
            android:id="@+id/spnSlope"
            android:layout_width="0dp"
            android:layout_height="55dp"          
            android:layout_marginRight="5dp"
            android:layout_weight="25"
            android:popupBackground="@android:color/transparent"
            tools:listitem="@android:layout/simple_spinner_item" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/nothing" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:gravity="center"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="@string/nothing" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="right"
                android:text="@string/firstAttempt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/firstAttemptDateBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="40"
                android:background="@drawable/btn_background_rounded"
                android:onClick="showDatePickerDialog"
                android:tag="firstAttemptDate"
                android:textColor="#575757" />

            <Button
                android:id="@+id/firstAttemptTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/btn_background_rounded"
                android:text="@string/zero"
                android:textColor="#575757" />

            <Spinner
                android:id="@+id/spnInjury"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="15"
                android:popupBackground="@android:color/transparent"
                tools:listitem="@android:layout/simple_spinner_item" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="right"
                android:text="@string/firstSend"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sendDateBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="40"
                android:background="@drawable/btn_background_rounded"
                android:onClick="showDatePickerDialog"
                android:tag="sendDate"
                android:textColor="#575757" />

            <Button
                android:id="@+id/sendTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@drawable/btn_background_rounded"
                android:text="@string/zero"
                android:textColor="#575757" />

            <Spinner
                android:id="@+id/spnStatus"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="15"
                android:popupBackground="@android:color/transparent"
                tools:listitem="@android:layout/simple_spinner_item" />

        </TableRow>

        

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >
    
    <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/moves"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnMoves"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="80"
            android:background="@drawable/btn_background_rounded"
            android:text="@string/zero"
            android:textColor="#575757" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >

        <EditText
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="100"
            android:background="@drawable/rounded_corner_edit_text"
            android:ems="10"
            android:hint="@string/comments"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete|textMultiLine"
            android:singleLine="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|right" >

         <RatingBar
             android:id="@+id/ratingBar"
             style="@style/AppTheme"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:numStars="5" />

         <Button
            android:id="@+id/btnSaveAttempt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_background_rounded"
            android:text="@string/save"
            android:textColor="#575757" />

    </LinearLayout>

</LinearLayout>